fixed margin-bottom under hero section on tablet and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -25,15 +25,15 @@
   left: 239px;
   top: 576px;
   font-family: inherit;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 1.2;
-  color: #212121;
   text-align: left;
   padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 24px;
   margin-bottom: 4px;
+  font-size: 18px;
+  color: #212121;
+  line-height: 1.2;
+  font-weight: bold;
 }
 
 .cards__list__paragraph {
@@ -80,14 +80,6 @@
   display: block;
 }
 
-@media screen and (min-width: 1200px) {
-  .characteristics__list {
-    display: flex;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .characteristics__list {
     margin-left: -30px;
@@ -95,11 +87,11 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .characteristics__list {
-    flex-wrap: wrap;
-    padding-left: 15px;
-    padding-right: 15px;
+    display: flex;
+    margin-left: -30px;
+    margin-top: -30px;
   }
 }
 
@@ -147,6 +139,26 @@
   padding: 28px 0;
   background: #f5f4fa;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .characteristics__list__wrapper {
+    text-align: center;
+    padding: 28px 0;
+    background: #f5f4fa;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .characteristics__list__wrapper {
+    text-align: center;
+    padding: 28px 0;
+    background: #f5f4fa;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
 }
 
 .clients__list {
