--- a/sass/base/_cards_lists.scss
+++ b/sass/base/_cards_lists.scss
@@ -20,15 +20,12 @@
     top: 576px;
 
     font-family: inherit;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 1.2;
-    color: $main-color;
     text-align: left;
     padding-bottom: 20px;
     padding-top: 20px;
     padding-left: 24px;
     margin-bottom: 4px;
+    @include font(18px, $main-color, 1.2, bold);
   }
 
   &__paragraph {
